--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-test
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta property="og:title" content="Digital Cheese's Articles">
+        <meta property="og:description" content="Articles I have written all archived on my website. Many of the articles you see here are exclusively released on my website so please check here if you're trying to find something I ended up writing.">
+        <meta property="og:image" content="https://archive.digitalcheese.xyz/assets/dc.jpg">
+        <meta property="og:image:alt" content="Digital Cheese Profile Picture">
+        <meta property="og:url" content="https://archive.digitalcheese.xyz/index.html">
+        <meta property="og:card" content="summary">
+        <meta name="viewport" content="width=device-width">
+        <meta name="author" content="Digital Cheese">
+        <meta name="description" content="Articles I have written all archived on my website. Many of the articles you see here are exclusively released on my website so please check here if you're trying to find something I ended up writing.">
+        <meta name="keywords" content="Digital Cheese, Analog Cheese, Technology, Gaming, Reviews, Rants, Memes, Sigma">
+        <link rel="shortcut icon" href="/assets/dc.ico">
+        <link rel="stylesheet" href="/assets/dc.css">
+        <script src="/assets/dc.js"></script>
+        <title>Digital Cheese's Articles</title>
+        <!-- Other Metadata -->
+        <meta property="twitter:creator" content="@DigitalCheeseYT">
+        <meta property="twitter:site" content="@DigitalCheeseYT">
+    </head>
+    <body>
+        <div class="container">
+            <div id="LinkMenu">
+                <button onclick="document.getElementById('LinkMenu').style.display = 'none'">EXIT Menu</button>
+                <ul><li><a href="https://digtialcheese.xyz/">Homepage</a></li>
+                <li><a href="https://digitalcheese.xyz/about.html">About Me</a></li>
+                <li><a href="/index.html">Articles</a></li>
+                <li><a href="https://status.digitalcheese.xyz/">Statuses</a></li>
+                <li><a href="https://archive.digitalcheese.xyz/">Archives</a></li>
+                <li><a href="https://videos.digitalcheese.xyz/">Videos</a></li></ul>
+                HTTPS is not required for all links, but highly recommended.
+            </div>
+            <div class="header">
+                <div class="logo"><a href="#"><img src="/assets/dc.jpg" alt="Logo" title="Click To Go To The Homepage"></a></div>
+                <div class="usrnme"><a href=/index.html>Digital Cheese</a></div>
+                <div class="quick-menu"><a onclick="LinkMenu()"><img src="/assets/menu.png" alt="Links" title="Click For The Link Navigation" class="LINK-ICO"></a></div>
+            </div>
+            <div class="content"><h1>Technology</h1>
+                WIP...
+                <h1>Uncategorized/Old</h1>
+            </div>
+            <div class="footer">2021-2023 <a href="https://digitalcheese.xyz/">Digital Cheese</a>, all rights reserved. If you would like to use any content on this website, please link to the original source assuming it still exists. If it was removed, please link to just the website homepage. Thank you for visiting this webpage!
+            </div>
+        </div>
+    </body>
+</html>
