PGP encryption guide released

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <div class="quick-menu"><a onclick="LinkMenu()"><img src="/assets/menu.png" alt="Links" title="Click For The Link Navigation" class="LINK-ICO"></a></div>
             </div>
             <div class="content"><h1>Technology</h1>
-                WIP...
+                <h2>2023</h2>
+                <a href="/tech/pgp-emails.html">Encrypt Your Emails Via PGP-Keys</a>
                 <h1>Uncategorized/Old</h1>
                 WIP...
             </div>
