--- a/tech/pgp-emails.html
+++ b/tech/pgp-emails.html
@@ -105,7 +105,8 @@
                 <hr>
                 Thanks for reading this tech tutorial! If you have any questions or criticism, please email me below and I will respond. I would give a PGP-key here as it would be fitting, but I unforunately don't have access to my main laptop to get my main PGP-key right now :(
                 <br><br>
-                <a href="mailto:dc@tfwno.gf">dc@tfwno.gf</a> | <a href="mailto:digitalcheese@att.net">digitalcheese@att.net</a>
+                <a href="mailto:dc@tfwno.gf">dc@tfwno.gf</a> | <a href="mailto:digitalcheese@att.net">digitalcheese@att.net</a><br>
+                XMR: 442aR1B8F7QPK6eH1cb5en6VBYc1Ve193NrMVXEX6qe7ALdKQVUBLH6WpMXoVGXnjD6wdtpp5JoeU5Ee31owkFPd9gVHRcA
                 <br><br>
                 Created November 28th, 2023 at 9:43PM<br>
                 Last Updated Novermber 28th, 2023 at 9:43PM
