--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <div id="LinkMenu">
                 <button onclick="document.getElementById('LinkMenu').style.display = 'none'">EXIT Menu</button>
                 <ul><li><a href="https://digtialcheese.xyz/">Homepage</a></li>
-                <li><a href="https://digitalcheese.xyz/about.html">About Me</a></li>
-                <li><a href="/index.html">Articles</a></li>
+                <li><a href="https://articles.digitalcheese.xyz/">Articles</a></li>
                 <li><a href="https://status.digitalcheese.xyz/">Statuses</a></li>
                 <li><a href="https://archive.digitalcheese.xyz/">Archives</a></li>
                 <li><a href="https://videos.digitalcheese.xyz/">Videos</a></li></ul>
