--- a/tech/pgp-emails.html
+++ b/tech/pgp-emails.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div id="LinkMenu">
                 <button onclick="document.getElementById('LinkMenu').style.display = 'none'">EXIT Menu</button>
-                <ul><li><a href="https://digtialcheese.xyz/">Homepage</a></li>
+                <ul><li><a href="https://digitalcheese.xyz/">Homepage</a></li>
                 <li><a href="https://articles.digitalcheese.xyz/">Articles</a></li>
                 <li><a href="https://status.digitalcheese.xyz/">Statuses</a></li>
                 <li><a href="https://archive.digitalcheese.xyz/">Archives</a></li>
