--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 <li><a href="https://articles.digitalcheese.xyz/">Articles</a></li>
                 <li><a href="https://status.digitalcheese.xyz/">Statuses</a></li>
                 <li><a href="https://archive.digitalcheese.xyz/">Archives</a></li>
-                <li><a href="https://videos.digitalcheese.xyz/">Videos</a></li></ul>
+                <li><a href="https://videos.digitalcheese.xyz/">Videos</a></li>
+                <li><a href="https://music.digitalcheese.xyz/">Music</a></li>
+                <li><a href="https://projects.digitalcheese.xyz/">Projects</a></li></ul>
                 HTTPS is not required for all links, but highly recommended.
             </div>
             <div class="header">
