MPGA Manifesto WIP

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta property="og:site_name" content="Digital Cheese's Articles">
         <meta property="og:title" content="Digital Cheese's Articles">
         <meta property="og:description" content="Articles I have written all archived on my website. Many of the articles you see here are exclusively released on my website so please check here if you're trying to find something I ended up writing.">
         <meta property="og:image" content="https://articles.digitalcheese.xyz/assets/dc.jpg">
