ok finally its actually fixed i think

--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -45,20 +45,17 @@
                 <ul>
                 <li><a href="#intro">Introduction</a></li>
                 <li><a href="#terms">Terms</a></li>
-                <li><a href="#issues">SDK's Issues</a><li><ul>
-                <li><a href="#issues-a">A. Broken Pages</a></li>
-                <li><a href="#issues-b">B. Lack Of Activity</a></li>
-                <li><a href="#issues-c">C. The Anti-SDK Establishment</a></li>
-                <li><a href="#issues-d">D. Miscallenous Issues</a></li>
-                </li></li></ul>
-                <li><a href="#solutions">Solutions?</a><li><ul>
-                <li><a href="#solutions-a">Fix Pages</a></li>
-                <li><a href="#solutions-b">Increase The Activity</a></li>
-                <li><a href="#solutions-c">Anti-SDK Establishment</a></li>
-                </li></li></ul>
-                <li><a href="#antisdk">Anti-SDKer Hell</a><li><ul>
-                <li><a href="#antisdk-a">A. Why They Are An Issue</a></li>
-                </li></li></ul>
+                <li><a href="#issues">SDK's Issues</a></li>
+                    <ul><li><a href="#issues-a">A. Broken Pages</a></li>
+                    <li><a href="#issues-b">B. Lack Of Activity</a></li>
+                    <li><a href="#issues-c">C. The Anti-SDK Establishment</a></li>
+                    <li><a href="#issues-d">D. Miscallenous Issues</a></li></ul>
+                <li><a href="#solutions">Solutions?</a></li>
+                    <ul><li><a href="#solutions-a">Fix Pages</a></li>
+                    <li><a href="#solutions-b">Increase The Activity</a></li>
+                    <li><a href="#solutions-c">Anti-SDK Establishment</a></li></ul>
+                <li><a href="#antisdk">Anti-SDKer Hell</a></li>
+                <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li></ul>
                 </ul>
                 <hr>
                 <h2 id="intro">Introduction</h2>
