--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -55,7 +55,7 @@
                     <li><a href="#solutions-b">Increase The Activity</a></li>
                     <li><a href="#solutions-c">Anti-SDK Establishment</a></li></ul>
                 <li><a href="#antisdk">Anti-SDKer Hell</a></li>
-                <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li></ul>
+                    <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li></ul>
                 </ul>
                 <hr>
                 <h2 id="intro">Introduction</h2>
@@ -80,11 +80,11 @@
                 <br><br>
                 Partially broken pages often function as intended, but they lack dark-mode CSS or parts or the page look a bit weird. They are mosty fine, sometimes you can even fix the issue on the client-side making things easier to use until HullBreach manages to fix it. For example, the bulletin boards would be partially broken because you are unable to reply to threads, but you are still able to read everything that has been posted and never deleted.
                 <br><br>
-                <img src="CHANGE LATER" alt="Partially Broken Page" title="Example Of Partially Broken Page">
+                <img src="/assets/misc/makepaintgreatagain/issues-a_1.png" alt="Partially Broken Page - Merely Light Mode Being Broken, But Otherwise Functional" title="Example Of Partially Broken Page">
                 <br><br>
                 Fully broken technically can load in some cases, but nothing actually works on the page as intended. The SDK library would be an example of this due to it's lack of an ability to read any of the books currently "available" along with it's lack of an ability to submit new books.
                 <br><br>
-                <img src="CHANGE LATER" alt="Fully Broken Page" title="Example Of Fully Broken Page">
+                <img src="/assets/misc/makepaintgreatagain/issues-a_2.png" alt="Fully Broken Page - Library Book Submission Having Both Broken CSS And Trying To Do Anything Seemingly Fails" title="Example Of Fully Broken Page">
                 <br><br>
                 Needless to say, we at least need to get SDK to have partially functioning pages for every page, preferably fully functioning though.
                 <h4 id="issues-b">B. Lack Of Activity</h4>
