2 CSS fixes added

--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -118,6 +118,10 @@
                 Not all problems on the site are just CSS, but often backend so I can't really help there. I have a good enough idea of PHP to be able to use it, but not good enough for it to be possible for me to just fix everything. Plus thats assuming another language isn't used as well.
                 <br><br>
                 However, if you fix the pages not working as intended then more people stay because it actually works. They also stay for longer. I am glad HullBreach has fixed email verification though, it was broken for years before he did so earlier this year. We need more major fixes like that I believe to make things go better on this front.
+                <br><br>
+                Temporary Solutions To CSS (will likely not be perfect):<br>
+                <a href="https://userstyles.world/style/9639">Better Darkmode</a><br>
+                <a href="https://3dspaint.com/blog?id=101045">AMOLED Theme</a>
                 <h4 id="solutions-b">Increase The Activity</h4>
                 Increasing the activity is pretty annoying to figure out how to do unless we want to bring idiots jnto this website. However, if we don't get activity then the website dies. As a result, I have a few ideas.
                 <br><br>
