--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -51,9 +51,9 @@
                     <li><a href="#issues-c">C. The Anti-SDK Establishment</a></li>
                     <li><a href="#issues-d">D. Miscallenous Issues</a></li></ul>
                 <li><a href="#solutions">Solutions?</a></li>
-                    <ul><li><a href="#solutions-a">Fix Pages</a></li>
-                    <li><a href="#solutions-b">Increase The Activity</a></li>
-                    <li><a href="#solutions-c">Anti-SDK Establishment</a></li></ul>
+                    <ul><li><a href="#solutions-a">A. Fix Pages</a></li>
+                    <li><a href="#solutions-b">B. Increase The Activity</a></li>
+                    <li><a href="#solutions-c">C. Anti-SDK Establishment</a></li></ul>
                 <li><a href="#antisdk">Anti-SDKer Hell</a></li>
                     <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li></ul>
                 </ul>
@@ -112,7 +112,7 @@
                 And more minor quality of life improvements.
                 <h2 id="solutions">Solutions?</h2>
                 Instead of bitching about SDK's issues and not doing anything about it, I am going to actually try to solve things around here.
-                <h4 id="solutions-a">Fix Pages</h4>
+                <h4 id="solutions-a">A. Fix Pages</h4>
                 This one is the most obvious. Just fix the pages that are broken. Some of them are merely CSS issues and thus you could change the stylesheet a bit and be done. Hell, you might fix other previously brokeb parts too. Carefulness is needed in order to not break more, but this is an easy fix.
                 <br><br>
                 Not all problems on the site are just CSS, but often backend so I can't really help there. I have a good enough idea of PHP to be able to use it, but not good enough for it to be possible for me to just fix everything. Plus thats assuming another language isn't used as well.
@@ -122,7 +122,7 @@
                 Temporary Solutions To CSS (will likely not be perfect):<br>
                 <a href="https://userstyles.world/style/9639">Better Darkmode</a><br>
                 <a href="https://3dspaint.com/blog?id=101045">AMOLED Theme</a>
-                <h4 id="solutions-b">Increase The Activity</h4>
+                <h4 id="solutions-b">B. Increase The Activity</h4>
                 Increasing the activity is pretty annoying to figure out how to do unless we want to bring idiots jnto this website. However, if we don't get activity then the website dies. As a result, I have a few ideas.
                 <br><br>
                 First off, start linking things via 3DSPaint links. Tutorials, stories you're writing that you aren't planning on selling as a book, etc. I might actually do the same thing for certain things and simply port things over to the archives at the same time. They should be done as blogs until the bulletins are fixed, in which case those would be better in some cases such as for actual discussion due to it's forum-like approach to things.
@@ -132,7 +132,7 @@
                 Thirdly, host events on the site. Preferably ones that won't be impossible to get people organized on even under perfect time-circumstances due to how many people still use DSi or 3DS for the website. Pokemon Tournaments, art competitons, etc. That gives people a reason to stay and sometimes encourages more activity because people are having FUN, not saying "gay sex uwu" for the millionth time this month.
                 <br><br>
                 To end off the ways to revive SDK, create your own group. I made DCE and its at 116 members, I made TDK and its at 82 members. Even on SDK, you can easily get members for your group. If you use other platforms, invite those members to the Paint version of the group. Its not hard, you can do what I do.
-                <h4 id="solutions-c">Anti-SDK Establishment</h4>
+                <h4 id="solutions-c">C. Anti-SDK Establishment</h4>
                 The Anti-SDK establishment is both hard to defeat and almost pointless. The main way I can think of to defeat them is to get more admins + overlords on our side, however that itself is hard. Unless HullBreach granted admin or there were very major movements to get someone else as admin, good luck. I'd root for Draconid_Jo here due to his basically perfect reputation even on the Discord + him being a bit like me in that he wants to revive SDK. Due to how long I can go on about them, they are part of a different section called <a href="#antisdk">Anti-SDKer Hell</a>
                 <h2 id="antisdk">Anti-SDKer Hell</h2>
                 If you have not already, I would recommend going back and reading what <a href="#terms">Anti-SDKer means</a> as to avoid confusion. As said in the definition, even overlords could be "Anti-SDK", but it is basically impossible. The biggest Anti-SDKer group is (ironically) the "unofficial" SDK Discord, referred to as SDKcord.
