--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -55,7 +55,9 @@
                     <li><a href="#solutions-b">B. Increase The Activity</a></li>
                     <li><a href="#solutions-c">C. Anti-SDK Establishment</a></li></ul>
                 <li><a href="#antisdk">Anti-SDKer Hell</a></li>
-                    <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li></ul>
+                    <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li>
+                    <li><a href="#antisdk-b">B. What They Do To SDK</a></li>
+                    <li><a href="#antisdk-c">C. Memes Of SDKcord</a></li></ul>
                 </ul>
                 <hr>
                 <h2 id="intro">Introduction</h2>
@@ -141,7 +143,13 @@
                 <h4 id="antisdk-b">B. What They Do To SDK</h4>
                 The "establishment" (if you want to call it that) essentially tries to kill off any actual progress of SDK. They're all Paint members or were once, and very rarely is it even "unintentional" as most seriously suggest just killing the website.
                 <br><br>
-                Ironically, they still have accounts in many cases and they still use the website. They complain Paint has "*insert current thing* rehtoric" usually, otherwise its even more non-sensical.
+                Ironically, they still have accounts in a lot of cases and they still use the website. They complain Paint has "*insert current thing* rehtoric" usually, otherwise its even more non-sensical. I can name several people who complain about Paint, do nothing to actually try to achieve what they want, yet still won't just quit such as Yeuron and Thi500, but that is besides the point as we are here simply to laugh at their foolishness.
+                <h4 id="antisdk-c">C. Memes Of SDKcord</h4>
+                yaynikki gets a bad dream:<br>
+                <img src="/assets/misc/makepaintgreatagain/antisdk-c_1" alt="yaynikki states that she was so mentally affected by me that she had a bad dream about me, literal 3 year old behavior." title="yaynikki becomes 3 years old">
+                <br><br>
+                Thi500 (aka AaronAstro) complains about evil homophobia:<br>
+                <img src
             </div>
             <div class="footer">2021-2023 <a href="https://digitalcheese.xyz/">Digital Cheese</a>, all rights reserved. If you would like to use any content on this website, please link to the original source assuming it still exists. If it was removed, please link to just the website homepage. Thank you for visiting this webpage!
             </div>
