--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -146,7 +146,9 @@
                 Ironically, they still have accounts in a lot of cases and they still use the website. They complain Paint has "*insert current thing* rehtoric" usually, otherwise its even more non-sensical. I can name several people who complain about Paint, do nothing to actually try to achieve what they want, yet still won't just quit such as Yeuron and Thi500, but that is besides the point as we are here simply to laugh at their foolishness.
                 <h4 id="antisdk-c">C. Memes Of SDKcord</h4>
                 yaynikki gets a bad dream:<br>
-                <img src="/assets/misc/makepaintgreatagain/antisdk-c_1" alt="yaynikki states that she was so mentally affected by me that she had a bad dream about me, literal 3 year old behavior." title="yaynikki becomes 3 years old">
+                <img src="/assets/misc/makepaintgreatagain/antisdk-c_1" alt="yaynikki on 11/29/2023 at 3:36AM - he's personally affected me to the point where, last night, i had a dream where i lose my admin priviledges (I presume due to lack of activity compared to other admins; I didn't find out for sure) and the first thing i discovered was a blog approved by another admin by dc that he was celebrating my demotion" title="yaynikki becomes 3 years old"><br>
+                *privileges<br>
+                How do you even get to this level-
                 <br><br>
                 Thi500 (aka AaronAstro) complains about evil homophobia:<br>
                 <img src
