wip + added more images

--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -40,7 +40,8 @@
                 <div class="quick-menu"><a onclick="LinkMenu()"><img src="/assets/menu.png" alt="Links" title="Click For The Link Navigation" class="LINK-ICO"></a></div>
             </div>
             <div class="content"><h1>Make Paint Great Again</h1>
-                <h4>December 4th, 2023</h4>
+                <h2>December 4th, 2023</h2>
+                <h4>Written By Digital Cheese</h4>
                 The manifesto intended to change the course of Paint history and destroy the anti-SDK establishment holding us back from the revolution.
                 <ul>
                 <li><a href="#intro">Introduction</a></li>
