--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2>2023</h2>
                 <a href="/tech/pgp-emails.html">Encrypt Your Emails Via PGP-Keys</a>
                 <h1>Uncategorized/Old</h1>
-                WIP...
+                <a href="/misc/makepaintgreatagain.html">Make Paint Great Again</a>
             </div>
             <div class="footer">2021-2023 <a href="https://digitalcheese.xyz/">Digital Cheese</a>, all rights reserved. If you would like to use any content on this website, please link to the original source assuming it still exists. If it was removed, please link to just the website homepage. Thank you for visiting this webpage!
             </div>
