--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -286,10 +286,10 @@
                 <h4 id="mpga-a">A. MPGA Logo</h4>
                 <img src="/assets/misc/makepaintgreatagain/mpga-a_1.png">
                 <br><br>
-                HTML:
+                HTML:<br>
                 <textarea readonly="true"><a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a></textarea><br>
                 3DSPaint:
-                [FIGURE ]
+                [FIGURE 19221]
                 <h4 id="mpga-b">B. Ways To Help</h4>
                 1. Share This Manifesto<br>
                 Share this manifesto around the internet! Whether you copy/paste the HTML code above or simply share the link, you get us seen more and thus you support the MPGA movement.
