final updates for now

--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -284,7 +284,7 @@
                 <h2 id="mpga">Supporting MPGA Movement</h2>
                 TDK/Venith shall MAKE PAINT GREAT AGAAAAAAAAAAAAAAAAAAAIN
                 <h4 id="mpga-a">A. MPGA Logo</h4>
-                <img src="/assets/misc/makepaintgreatagain/mpga-a_1.png">
+                <a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a>
                 <br><br>
                 HTML:<br>
                 <textarea readonly="true"><a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a></textarea><br>
@@ -317,7 +317,7 @@
                 XMR: 442aR1B8F7QPK6eH1cb5en6VBYc1Ve193NrMVXEX6qe7ALdKQVUBLH6WpMXoVGXnjD6wdtpp5JoeU5Ee31owkFPd9gVHRcA
                 <br><br>
                 Created On December 7th, 2023 At 9:02PM<br>
-                Last Updated On December 7th, 2023 At 9:05PM
+                Last Updated On December 7th, 2023 At 9:09PM
             </div>
             <div class="footer">2021-2023 <a href="https://digitalcheese.xyz/">Digital Cheese</a>, all rights reserved. If you would like to use any content on this website, please link to the original source assuming it still exists. If it was removed, please link to just the website homepage. Thank you for visiting this webpage!
             </div>
